--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -31,7 +31,7 @@ common_tags#:#Tags
 common_title#:#Title
 common_upload_date#:#Upload Date
 common_video#:#Video
-common_recently_uploaded#:#Back to Channels
+common_recently_uploaded#:#Recently uploaded:
 common_title_home#:#Channels
 common_back_to_channels#:#Back to Channels
 form_add_folder#:#Add Folder
