--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -31,7 +31,7 @@ common_tags#:#Tags
 common_title#:#Titel
 common_upload_date#:#Hochgeladen am
 common_video#:#Video
-common_recently_uploaded#:#Zurück zu Channels
+common_recently_uploaded#:#Letzte Uploads:
 common_title_home#:#Channels
 common_back_to_channels#:#Zurück
 form_add_folder#:#Ordner hinzufügen
